--- a/composer.json
+++ b/composer.json
@@ -16,8 +16,8 @@
         "laravel/fortify": "^1.17",
         "laravel/framework": "^11.0",
         "laravel/tinker": "^2.8",
-        "phpseclib/phpseclib": "~3.0",
-        "mobiledetect/mobiledetectlib": "^4.8"
+        "mobiledetect/mobiledetectlib": "^4.8",
+        "phpseclib/phpseclib": "~3.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
